# nanito-agent

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
playbooks/: build-api.yaml  build-dashboard.yaml  build-saas.yaml  explore-scenarios.yaml  fix-bug.yaml  ship.yaml
plugin/.claude-plugin/: plugin.json
plugin/agents/: debugger.md  planner.md  reviewer.md
plugin/commands/: nanito-run.md  nanito-setup.md
plugin/skills/memory-protocol/: SKILL.md
plugin/skills/nanito-core/: SKILL.md
plugin/skills/playbook-runner/: SKILL.md
src/nanito_agent/: __init__.py  __main__.py  agents.py  cli.py  consumer.py  dispatch.py  executor.py  inbox.py  mcp.py  memory.py  monitor.py  notify.py  playbook.py  plugins.py  questions.py  runner.py  status.py  verify.py  voice.py  web.py  writer.py
src/nanito_agent/agents/: announcer.md  api-designer.md  architect.md  debugger.md  devops-guard.md  digest.md  fixer.md  frontend-builder.md  implementer.md  predictor.md  reviewer.md  scenario-explorer.md  shipper.md  tester.md
src/nanito_agent/templates/hooks/: config-protection.sh  session-monitor.py  test-nudge.sh  timeful.sh  (+1 more)
templates/: CLAUDE.md.j2
templates/hooks/: block-no-verify.sh  console-warn.sh  git-push-guard.sh  pre-compact.sh  session-end.sh  session-start.sh
tests/: test_agents.py  test_cli_run.py  test_consumer.py  test_dispatch.py  test_executor.py  test_inbox.py  test_mcp.py  test_memory.py  test_monitor.py  test_playbook.py  test_plugin.py  test_runner.py  test_template.py  test_verify.py  test_voice.py  test_web.py  test_writer.py
