[project]
name = "nanito-agent"
version = "0.2.0"
description = "Agent orchestration platform for Claude Code — playbooks, agents, memory, monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "nanito-agent contributors" }]
dependencies = [
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
nanito-agent = "nanito_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanito_agent"]

[tool.hatch.build.targets.wheel.force-include]
"src/nanito_agent/templates" = "nanito_agent/templates"
"src/nanito_agent/agents" = "nanito_agent/agents"
"playbooks" = "nanito_agent/playbooks"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
